--- a/packages/trader/src/AppV2/Components/Filter/filter.scss
+++ b/packages/trader/src/AppV2/Components/Filter/filter.scss
@@ -26,7 +26,7 @@
     }
 
     &__chip {
-        background-color: var(--core-color-solid-slate-50);
+        background-color: var(--semantic-color-slate-solid-surface-frame-low);
 
         & > p {
             font-size: var(--core-fontSize-75);
