--- a/packages/trader/src/AppV2/Components/OnboardingGuide/GuideForPages/onboarding-guide.scss
+++ b/packages/trader/src/AppV2/Components/OnboardingGuide/GuideForPages/onboarding-guide.scss
@@ -100,7 +100,7 @@
     position: relative;
     height: 218.5px;
     width: 100%;
-    background-color: var(--core-color-solid-slate-750);
+    background-color: var(--core-color-solid-slate-50);
 
     &:before {
         content: 'Placeholder. Video will arrive soon';
