--- a/packages/trader/src/AppV2/Containers/ContractDetails/contract-details.scss
+++ b/packages/trader/src/AppV2/Containers/ContractDetails/contract-details.scss
@@ -4,7 +4,7 @@ $ONE_BUTTON_FOOTER_HEIGHT: var(--core-size-3200);
 $TWO_BUTTONS_FOOTER_HEIGHT: 120px;
 
 .contract-details {
-    background-color: var(--core-color-solid-slate-75);
+    background-color: var(--semantic-color-slate-solid-surface-frame-mid);
     padding: 0 var(--core-spacing-400);
     display: flex;
     flex-direction: column;
@@ -43,7 +43,6 @@ $TWO_BUTTONS_FOOTER_HEIGHT: 120px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: var(--core-color-solid-slate-50);
     border-radius: var(--core-borderRadius-500);
     padding: var(--core-spacing-800);
 
